# libirm

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  macos-10.14.yml  macos-12.yml  macos.yml  ubuntu-18.04.yml  ubuntu-20.04.yaml  ubuntu-24.yml
build-system/: build-system.cmake  compilation-flags.cmake
ci/: build.yaml  download-llvm.yaml  variables.yaml
include/irm/: ConstConstruction.h  IRMutation.h  irm.h
include/irm/ConstValues/: ConstValueConstructor.h
include/irm/Mutations/: BinaryOperatorReplacement.h  CallRemoval.h  CallReplacement.h  CmpInstPredicateReplacement.h  ConstantReplacement.h  Dummy.h  IntrinsicReplacement.h  NegateTruncReplacement.h  NegateXORReplacement.h  StoreValueReplacement.h  SwapBinaryOperands.h  SwapInstructionWithOperand.h  VoidCallRemoval.h
lib/: BinaryOperatorReplacement.cpp  CMakeLists.txt  CallReplacement.cpp  CmpInstPredicateReplacement.cpp  ConstValueConstructor.cpp  ConstantReplacement.cpp  IntrinsicReplacement.cpp  NegateTrunkReplacement.cpp  NegateXORReplacement.cpp  StoreValueReplacement.cpp  SwapBinaryOperands.cpp  SwapInstructionWithOperand.cpp  VoidCallRemoval.cpp
lib/Mutations/: Dummy.cpp
tests/: CMakeLists.txt
tests/Mutations/: BinaryOperatorReplacementTests.cpp  CallRemovalTests.cpp  CallReplacementTests.cpp  CmpInstPredicateReplacementTests.cpp  ConstantReplacementTests.cpp  ConstatnReplacementTests.cpp  DummyTests.cpp  InstrinsicReplacementTests.cpp  NegateTruncReplacementTests.cpp  NegateXORReplacementTests.cpp  StoreValueReplacementTests.cpp  SwapBinaryOperandsTests.cpp  SwapInstructionWithOperandTests.cpp  TestLLVMCompatibility.h
